# AutoBTD6

./: README.md  convert_image_to_mask.py  convert_playthrough.py  gamemodes.json  generate_supported_maps_table.py  helper.py  image_areas.json  insert_new_map.py  keybinds.json  main.py  make_screenshot.py  maps.json  normalize_playthrough_stats.py  ocr.py  ocr_image.py  playthrough_stats.json  pyproject.toml  recognize_screenshot.py  record_playthrough.py  replay.py  towers.json  update_readme.py
core/: __init__.py  constants.py
core/automation/: __init__.py  image.py  input.py  screen.py
core/config/: __init__.py  loader.py  manager.py
core/game/: __init__.py  costs.py  maps.py  medals.py  towers.py
core/platform/: __init__.py  factory.py
core/platform/input/: __init__.py  base.py  linux.py  macos.py  windows.py
core/playthrough/: __init__.py  manager.py  parser.py  stats.py
utils/: display.py  file.py  position.py
