[project]
name = "autobtd6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ahk>=1.8.4",
    "keras>=3.12.0",
    "keyboard>=0.13.5",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
